--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -58,6 +58,17 @@ header {
 	justify-content: space-between;
 	margin: 50px 0
 }
+
+ul img {
+	width: 22px;
+	height: 22px;
+}
+
+a {
+	text-decoration: none;
+	color: black;
+  }
+
 section {
 	margin: 50px 0
 }
@@ -186,3 +197,39 @@ footer nav ul {
 	margin: 2em
 }
 
+.filtres {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	margin-bottom: 40px;
+}
+
+.filtres button {
+	border: 1px solid #1D6154;
+	border-radius: 25px;
+	padding: 5px 20px 5px 20px;
+	color: #1D6154;
+	font-size: 15px;
+	font-weight: 500;
+}
+
+.filtres button:hover {
+	background-color: #1D6154;
+	color: white;
+}
+
+aside .admin-edition {
+	display: flex;
+	justify-content: center;
+	background-color: black;
+	color: white;
+	padding: 20px;
+	font-size: 1.25em;
+	font-weight: lighter;
+}
+
+#Icone {
+	color: white;
+	margin-right: 20px;
+	font-size: 15px;
+}
