--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -238,7 +238,8 @@ aside .admin-edition {
 .titrebouton {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
+
   }
   
 .titrebouton h2 {
@@ -247,13 +248,14 @@ aside .admin-edition {
 
 .titrebouton button {
 	display: none;
-	padding-right: 20px;
-	padding-bottom: -20px;
 	border: none;
+	margin-top: 8px;
 }
 
 .titrebouton i {
-	margin-right: 20px;
+	display: flex;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .modal {
@@ -269,15 +271,61 @@ aside .admin-edition {
 
 .modal_body {
 	background-color: white;
-	width: 630px;
-	height: 688px;
+	width: 33%;
+	height: 66%;
 	border-radius: 15px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	position: relative;
+}
+.modal_body button {
+	border: 1px solid #1D6154;
+	border-radius: 25px;
+	padding: 8px 40px;
+	color: white;
+	background-color: #1D6154;
+	font-size: 15px;
+	font-weight: 500;
+}
+.modal_body h3 {
+	font-weight: 500;
+	font-size: 24px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
+.modal_body .galerie {
+	display: flex;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+	align-items: center;
+	margin-left: 15%;
+	margin-right: 15%;	
+	}
+.modal_body span {
+	display: inline-block;
+	position: absolute;
+	background-color: black;
+	padding: 2px;
+	right: 0;
+}
 
+.fa-trash-can {
+	color: white;
+	font-size: 10px;
+}
+
+.galerie figure {
+	flex: 0 0 18%;
+	margin-bottom: 20px;
+	margin-right: 5px;
+	position: relative;
+}
+
+.galerie figure img {
+	height: 100%;
+	width: 100%;
 }
 
 p i {
@@ -288,120 +336,72 @@ p i {
 	font-size: large;
 }
 
-.modal_body button {
-	border: 1px solid #1D6154;
-	border-radius: 25px;
-	padding: 5px 20px 5px 20px;
-	color: white;
-	background-color: #1D6154;
-	font-size: 15px;
-	font-weight: 500;
-}
-
-.modal_body h3 {
-	position: relative;
-	bottom: 25px;
-	font-weight: 500;
-	font-size: 24px;
-}
-
-
-.modal_body .galerie {
-	display: flex;
-  	justify-content: flex-start;
-	flex-wrap: wrap;
-  	align-items: center;
-	margin-left: 50px;
-	margin-right: 50px;
-	position: relative;
-	bottom: 30px;
-
-}
-
-.modal_body .galerie img {
-	height: 103px;
-	width: 80px;
-
-}
-
-.modal_body .galerie figure {
-	flex: 0 0 20%;
-	margin-bottom: 30px;
-}
-
-.modal_body span {
-	display: inline-block;
-	position: relative;
-	background-color: black;
-	padding: 2px;
-	bottom: 85px;
-	left: 75px;
-	.fa-trash-can {
-		color: white;
-		font-size: 10px;
-	}
-
-}
 
 .modalAjout {
 	background-color: white;
-	width: 630px;
-	height: 688px;
 	border-radius: 15px;
 	display: none;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	position: relative;
+	width: 33%;
+	height: 66%;
 	.fa-arrow-left {
 		position: absolute;
-		top: 10px;
-		left: 10px;
+		top: 20px;
+		left: 20px;
 		font-size: 20px;
 		cursor: pointer;
 	}
 	.fa-xmark {
 		position: absolute;
-		top: 10px;
-		right: 10px;
+		top: 20px;
+		right: 20px;
 		font-size: 20px;
 		cursor: pointer;
 	}
 	form {
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
-		height: 80%;
+		justify-content: space-evenly;
+		height: 85%;
 		width: 80%;
 		gap: 10px;
 		.containerAddPhoto {
-			background-color: rgba(135, 229, 250, 0.5);
+			background-color: #e9edf1;
 			height: 30%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			gap: 10px;
 			label {
-				background-color: black;
-				color: white;
-				padding: 5px 10px;
+				background-color: rgba(203, 214, 220, 1);
+				color: black;
+				padding: 10px 20px;
+				font-size: 14px;
+				border-radius: 15px;
 			}
 			input {
 				display: none;
 			}
 			.fa-image {
-				font-size: 3.5em;
-				color: aquamarine;
+				font-size: 5em;
+				color: #abb3ba;
 			}
 			img {
 				display: none;
 				max-width: 100%;
 				height: 100%;
 			}
+			p {
+				font-size: 10px;
+			}
 
 		}
 		.button {
 			background-color: white;
-			padding: 5px 10px;
+			padding: 10px 40px;
 			border-radius: 25px;
 			border: none;
 			&:focus {
@@ -409,6 +409,52 @@ p i {
 				color: white;
 			}
 		}
+		input, select {
+			border: none;
+			padding: 10px;
+		}
 	}
 
+}
+
+.modalAjout h3 {
+	font-size: 24px;
+}
+
+.modal_body .line  {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 80px;
+	width: 80%;
+	border-top: 1px solid gray;
+}
+
+.container-button-add-work {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+	width: 100%;
+	border-top: 1px solid gray;
+}
+
+.button-add-work {
+	border: 1px solid #1D6154;
+	border-radius: 25px;
+	padding: 8px 40px;
+	color: white;
+	background-color: #1D6154;
+	font-size: 15px;
+	font-weight: 500;
+}
+
+#buttonReadyToWork{
+	background-color:#1D6154;
+}
+
+#buttonReadyToWork:hover{
+	filter: brightness(0.9);
+	box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
+	cursor: default;
 }
